Fix select box off screen

--- a/resources/less/forum/extension.less
+++ b/resources/less/forum/extension.less
@@ -1324,6 +1324,14 @@ body.dark.dark--oled {
     }
 }
 
+.SettingsPage {
+    .Settings-theme {
+        select.FormControl {
+            width: 100%;
+        }
+    }
+}
+
 body.dark {
     .SettingsPage {
         .Settings-theme {
